# CapsGlow

./: Cargo.toml  README.md
src/: main.rs
src/tray/: mod.rs
src/tray/menu/: handler.rs  item.rs  mod.rs
