[package]
name = "CapsGlow"
version = "0.4.0"
edition = "2024"
description = "Windows Capslock Indicator"
authors = ["iKineticate"]
license = "MIT License"
repository = "https://github.com/iKineticate/CapsGlow"

[dependencies]
# 错误处理
anyhow = "1.0.100"
# 日志
log = { version = "0.4.29", features = ["release_max_level_off"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
# 窗口
winit = "0.30.12"
softbuffer = "0.4.8"
# 字体渲染
ab_glyph = { version = "0.2.32", default-features = false, features = ["std"] }
# 图像处理
image = { version = "0.25.9", default-features = false, features = ["ico", "png"] }
# 托盘
tray-controls = "0.1.2"
tray-icon = "0.21.2"
# 注册表
winreg = "0.55.0"
# 配置
toml = "0.9.10"
serde= { version = "1.0.228", features = ["derive"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    # uiaccess
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_System_Threading"
]

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true